# CSPillEngine

./: .gitignore  .gitmodules  README.md  part1_README.md  part2_README.md  part3_README.md  setup.py
.github/workflows/: compile-linux.yml  cpplint.yml  documentation.yml  static-gh-pg.yml
Engine/: CMakeLists.txt  Doxyfile  README.md  windows_build_engine.bat
Engine/demo/: app.py
Engine/demo/Scenes/: default.scene
Engine/docs/: index.html
Engine/docs/html/: _animation_component_8h_source.html  _camera_component_8h_source.html  _collision_component_8h_source.html  _component_8h_source.html  _editor_scene_8h_source.html  _engine_8h_source.html  _game_object_8h_source.html  _resource_manager_8h_source.html  _scene_8h_source.html  _tiny_math_8hpp_source.html  _transform_component_8h_source.html  _u_i_8h_source.html  _u_i_text_8h_source.html  _utils_8h_source.html  annotated.html  class_c_s_pill_1_1_editor_1_1_resource_manager_u_i-members.html  class_c_s_pill_1_1_editor_1_1_resource_manager_u_i.html  class_c_s_pill_1_1_editor_1_1_scene_u_i-members.html  class_c_s_pill_1_1_editor_1_1_scene_u_i.html  class_c_s_pill_1_1_editor_1_1_tile_set_editor_u_i-members.html  class_c_s_pill_1_1_editor_1_1_tile_set_editor_u_i.html  class_c_s_pill_1_1_engine_core_1_1_animation_component-members.html  class_c_s_pill_1_1_engine_core_1_1_animation_component.html  class_c_s_pill_1_1_engine_core_1_1_camera_component-members.html  class_c_s_pill_1_1_engine_core_1_1_camera_component.html  class_c_s_pill_1_1_engine_core_1_1_collision_component-members.html  class_c_s_pill_1_1_engine_core_1_1_collision_component.html  class_c_s_pill_1_1_engine_core_1_1_component-members.html  class_c_s_pill_1_1_engine_core_1_1_component.html  class_c_s_pill_1_1_engine_core_1_1_engine-members.html  class_c_s_pill_1_1_engine_core_1_1_engine.html  class_c_s_pill_1_1_engine_core_1_1_game_object-members.html  class_c_s_pill_1_1_engine_core_1_1_game_object.html  class_c_s_pill_1_1_engine_core_1_1_layer-members.html  class_c_s_pill_1_1_engine_core_1_1_layer.html  class_c_s_pill_1_1_engine_core_1_1_py_component-members.html  class_c_s_pill_1_1_engine_core_1_1_py_component.html  class_c_s_pill_1_1_engine_core_1_1_resource_manager-members.html  class_c_s_pill_1_1_engine_core_1_1_resource_manager.html  class_c_s_pill_1_1_engine_core_1_1_s_d_l_renderer-members.html  (+92 more)
Engine/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+4 more)
Engine/include/Core/: AnimationComponent.h  CameraComponent.h  CollisionComponent.h  Component.h  Engine.h  GameObject.h  ResourceManager.h  Scene.h  TransformComponent.h  UI.h  UIText.h  Utils.h
Engine/include/Editor/: EditorScene.h
Engine/include/Utils/: TinyMath.hpp
Engine/include/pybind/: pb_animationcomponent.hpp  pb_cameracomponent.hpp  pb_collision_component.hpp  pb_component.hpp  pb_engine.hpp  pb_gameobject.hpp  pb_media.hpp  pb_resource_manager.hpp  pb_scene.hpp  pb_tiny_math.hpp  pb_transformcomponent.hpp  pb_ui_text.hpp
Engine/src/Core/: AnimationComponent.cpp  CameraComponent.cpp  CollisionComponent.cpp  Component.cpp  Engine.cpp  GameObject.cpp  ResourceManager.cpp  Scene.cpp  TransformComponent.cpp  UI.cpp  UIText.cpp  Utils.cpp
Engine/src/Editor/: EditorScene.cpp  main.cpp
Engine/src/pybind/: pb_bindings.cpp  pybind_scene.cpp
